# wxtj-converter

./: .gitignore  Pipfile  README.md  asset-manifest.json  index.html
apps/converter/: forms.py  lib.py  urls.py  views.py
backend/: .gitignore  cdk.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
backend/lib/: app.ts  converter-stack.ts
backend/src/: converter.py  format.py  pyproject.toml  show.py  spotify.py
backend/wxtj-converter-api/: .gitignore  handler.py  requirements.txt  serverless.yml  tech.json  test.json  test.py
backend/wxtj-converter-api/lib/: convertlib.py  pyproject.toml
conf/: .env.example  settings.py  urls.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.scss  App.tsx  Main.tsx
lib/: convertlib.py  test.py  util.py
static/css/: main.8e84e84c.chunk.css  main.8e84e84c.chunk.css.map  main.8f11a4e5.chunk.css  main.8f11a4e5.chunk.css.map
static/js/: 2.0e7f0af6.chunk.js  2.0e7f0af6.chunk.js.map  2.440ad713.chunk.js  2.440ad713.chunk.js.map  2.d8d783d6.chunk.js  2.d8d783d6.chunk.js.map  3.f8b1bc22.chunk.js  3.f8b1bc22.chunk.js.map  main.1c82bf67.chunk.js  main.1c82bf67.chunk.js.map  main.2ffe010a.chunk.js  main.2ffe010a.chunk.js.map  main.41af6cf6.chunk.js  main.41af6cf6.chunk.js.map  main.5624187e.chunk.js  main.5624187e.chunk.js.map  main.62071316.chunk.js  main.62071316.chunk.js.map  main.7abd35bb.chunk.js  main.7abd35bb.chunk.js.map  main.7f33dc44.chunk.js  main.7f33dc44.chunk.js.map  main.7ff69f8c.chunk.js  main.9aff03fa.chunk.js  (+12 more)
templates/: index.html  warnings.html
(+7 files in other folders)
