[tool.poetry]
name = "convertlib"
version = "0.1.0"
description = "Tiny library for converting Spotify playlists to WXTJ/WTJU playlist format."
authors = ["Joe Kerrigan <joek1301@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
spotipy = "^2.19.0"
validators = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
